--- a/billing/templates/billing/momo_checkout.html
+++ b/billing/templates/billing/momo_checkout.html
@@ -21,7 +21,7 @@
         }
 
         @media (min-width: 992px) {
-            #content {margin-top: 6%}
+            #content {margin-top: 3%}
         }
 
         div#checkout input {border: 1px solid #bbb;}
@@ -30,6 +30,8 @@
         #content form .hint {color: #8D96C5; font-size: 14px}
         #content form ul.errorlist {padding-left: 0}
         #content form ul.errorlist li {color: #FF0808; list-style-type: none}
+        .momo-warning {background: #f5f5f5; border: 1px solid #8D96C5;border-radius: 3px;color: #4461d6;font-size: 11px;
+            margin-left: -10%;text-align: center;padding: 6px 10px;width: 120%}
     </style>
 {% endblock %}
 
@@ -54,6 +56,10 @@
             </div>
             <h3 style="text-align: center"> {% trans "Pay with" %} {{ payment_mean.name }} </h3>
             <p class="text-muted" style="text-align: center"> {% trans "Type your phone number and submit" %} </p>
+            <p class="momo-warning">{% blocktrans %}
+                Your phone number must be registered to
+                <a href="https://www.mtncameroon.net/en/mtn-mobile-money/" target="_blank">MTN Mobile Money</a> service{% endblocktrans %}
+            </p>
             <form onsubmit="return false">{% csrf_token %}
                 <div class="form-group" style="margin-top: .4em">
                     <label for="phone" class="sr-only">{% trans "Phone number" %}</label>
@@ -78,12 +84,12 @@
             $('#do-pay').click(function () {
                 if (!$(this).hasClass('btn-primary')) return;
                 $(this).removeClass('btn-primary').addClass('btn-default');
-                $('#checkout .spinner').show();
                 var phone = $('#phone').val();
-                if (phone.length !== 9) {
+                if (phone.length !== 9 && phone.length !== 12) {
                     alert('Invalid phone number');
                     return;
                 }
+                $('#checkout .spinner').show();
                 $.ajax({
                     url: '{% url 'billing:init_momo_transaction' %}',
                     data: {phone: phone},
