Implementation of Django messages API and Customized ikwen default logging

--- a/accesscontrol/templates/accesscontrol/forgotten_password.html
+++ b/accesscontrol/templates/accesscontrol/forgotten_password.html
@@ -16,29 +16,34 @@
 {% block content %}
     <div id="content" class="form container">
         {% if request.GET.success %}
+{#            This block appears only if it's e-mail recovery#}
             <div class="success">
                 {% trans "Instructions to reset you password were sent to your e-mail." %}
             </div>
             <a href="{% url 'home' %}"> {% trans "Home" %} </a>
         {% else %}
-            {% if request.GET.emailSendFailed %}
-                <div class="failure">
-                    {% trans "An unknown error occured while sending e-mail. Please try again later." %}
-                </div>
-                <a href="{% url 'index' %}"> {% trans "Home" %} </a>
-            {% elif request.GET.notFound %}
-                <div class="failure"> {% trans "E-mail not found. Please check and try again." %}</div>
+            {% if messages %}
+                {% for msg in messages %}<p class="{{ msg.tags }}" style="font-size: 1em; padding: 9px">{{ msg }}</p>{% endfor %}
             {% endif %}
             <div class="directions">
-                {% trans "Please provide your email to receive password reset information." %}
-                {# TODO: Allow people to retrieve password with phone number as well #}
+                {% if sms_recovery %}
+                    {% trans "Please enter your phone to receive password a reset code." %}
+                {% else %}
+                    {% trans "Please enter your email to receive password reset information." %}
+                {% endif %}
             </div>
             <div id="forgotten-pwd" class="form-wrapper">
                 <form method="post" action="{% url 'ikwen:forgotten_password' %}"> {% csrf_token %}
                     <div class="form-group">
-                        <label for="lg-username">Email</label>
-                        <input id="lg-username" class="form-control input-sm username" type="text" name="email" />
-                        {{ form.username.errors }}
+                        {% if sms_recovery %}
+                            <label for="phone">{% trans "Phone" %}</label>
+                            <input id="phone" class="form-control input-sm phone" type="text" name="phone" />
+                            {{ form.phone.errors }}
+                        {% else %}
+                            <label for="email">Email</label>
+                            <input id="email" class="form-control input-sm email" type="text" name="email" />
+                            {{ form.email.errors }}
+                        {% endif %}
                     </div>
                     <div class="form-group">
                         <button class="btn btn-primary btn-block btn-sm"> {% trans "Reset password" %} </button>
