--- a/accesscontrol/templates/accesscontrol/set_new_password_sms_recovery.html
+++ b/accesscontrol/templates/accesscontrol/set_new_password_sms_recovery.html
@@ -20,7 +20,7 @@
         }
 
         @media (min-width: 992px) {
-            #content {margin-top: 3%}
+            #content {margin-top: 2%}
         }
 
         div#confirmation input {border: 1px solid #bbb;}
@@ -34,19 +34,25 @@
 
 {% block content %}
     <div id="content" class="container">
-        {% if error_message %}
-            <p class="failure" style="font-size: 1em; margin: auto; padding: 9px; width: 360px">{{ error_message }}</p>
+        {% if messages %}
+            {% for msg in messages %}<p class="{{ msg.tags }}" style="font-size: 1em; padding: 9px">{{ msg }}</p>{% endfor %}
         {% endif %}
-        <div class="col-xs-12 text-right" style="font-size: 13px">
-            <a href="{% url 'ikwen:logout' %}">{% trans "Logout" %}</a>
-        </div>
         <div id="confirmation">
-            <h3 style="text-align: center"> {% trans "Confirm your phone" %} </h3>
-            <p class="text-muted" style="text-align: center"> {% trans "Type the 4 digits code we sent you by SMS" %} </p>
-            <form class="submit-code" action="{% url 'ikwen:phone_confirmation' %}?{{ request.META.QUERY_STRING }}" method="post">{% csrf_token %}
+            <h3 style="text-align: center"> {% trans "Reset your password" %} </h3>
+            <p class="text-muted" style="text-align: center"> {% trans "Type the 4 digits code we sent you by SMS and choose a new password" %} </p>
+            <form class="submit-code" action="{% url 'ikwen:set_new_password_sms_recovery' %}?{{ request.META.QUERY_STRING }}" method="post">{% csrf_token %}
                 <div class="form-group" style="margin-top: .4em">
-                    <label for="code" class="sr-only">{% trans "Confirmation code" %}</label>
-                    <input id="code" class="form-control" type="text" name="code" />
+                    <label for="code">{% trans "Confirmation code" %}</label>
+                    <input id="code" class="form-control input-sm" type="text" name="reset_code" />
+                </div>
+                <div style="border-bottom: 1px solid #ccc; margin: 0 0 15px -10%; width: 120%"></div>
+                <div class="form-group">
+                    <label for="new-pwd">{% trans "New Password" %}</label>
+                    <input id="new-pwd" class="form-control input-sm password" type="password" name="new_password1" />
+                </div>
+                <div class="form-group">
+                    <label for="confirm-pwd">{% trans "Confirm" %}</label>
+                    <input id="confirm-pwd" class="form-control input-sm password" type="password" name="new_password2" />
                 </div>
                 <div class="form-group">
                     <button class="btn btn-primary btn-block btn-sm"> {% trans "Continue" %} </button>
@@ -57,8 +63,6 @@
                 {% include 'core/snippets/spinner.html' %}
                 <p class="text-muted" style="font-size: 12px">{% trans "Please be patient ! SMS can sometimes take about 1-2 mn to get to you." %}</p>
                 <a class="get-new-code" href="#">{% trans "Resend confirmation code" %}</a>
-                <p class="text-muted" style="margin-top: 10px">{% trans "OR" %}</p>
-                <a href="{{ account_setup_url|ikwenize }}">{% trans "Change phone number" %}</a>
                 <div class="code-sent" style="display: none">
                     <i style="font-size: 2em; color: #039B03" class="glyphicon glyphicon-ok"></i>
                     <p class="text-success">{% trans "A new code was sent to you." %}</p>
@@ -74,11 +78,26 @@
     <script>
         (function() {
             $('.submit-code').submit(function() {
-                var code = $('#code').val();
+                var code = $('#code').val(),
+                    newPwd1 = $('#new-pwd').val(),
+                    newPwd2 = $('#confirm-pwd').val();
                 if (!/\d{4}/.test(code)) {
-                    alert("{% trans 'Please enter a valid 4 digits code' %}");
+                    alert("{% trans 'Please enter a valid 4 digits code.' %}");
                     return false
                 }
+                if (!(newPwd1 && newPwd2)) {
+                    alert("{% trans 'Please enter a new password.' %}");
+                    return false
+                }
+                if (newPwd1 !== newPwd2) {
+                    alert("{% trans 'Passwords mismatch, please enter the same word.' %}");
+                    return false
+                }
+                if (newPwd1.length < 4) {
+                    alert("{% trans 'Passwords too short. Use at least 4 characters.' %}");
+                    return false
+                }
+
             });
             $('.get-new-code').click(function() {
                 $(this).hide();
