--- a/accesscontrol/templates/accesscontrol/set_new_password.html
+++ b/accesscontrol/templates/accesscontrol/set_new_password.html
@@ -21,12 +21,12 @@
         <div id="set-password" class="form-wrapper">
             <form action="{% url 'ikwen:set_new_password' uidb64 token %}" method="post">{% csrf_token %}
                 <div class="form-group">
-                    <label for="lg-password">{% trans "New Password" %}</label>
-                    <input id="lg-password" class="form-control input-sm password" type="password" name="new_password1" />
+                    <label for="new-pwd">{% trans "New Password" %}</label>
+                    <input id="new-pwd" class="form-control input-sm password" type="password" name="new_password1" />
                 </div>
                 <div class="form-group">
-                    <label for="lg-password">{% trans "Confirm" %}</label>
-                    <input id="lg-password" class="form-control input-sm password" type="password" name="new_password2" />
+                    <label for="confirm-pwd">{% trans "Confirm" %}</label>
+                    <input id="confirm-pwd" class="form-control input-sm password" type="password" name="new_password2" />
                 </div>
                 <div class="form-group">
                     <button class="btn btn-primary btn-block btn-sm"> {% trans "Submit" %} </button>
