--- a/core/templates/core/base_admin.html
+++ b/core/templates/core/base_admin.html
@@ -74,39 +74,44 @@
                             {% block app_admin_nav %}{% endblock %}
                             {% if perms.accesscontrol.sudo %}
                                 <div class="divider"></div>
-                                <ul class="nav nav-pills nav-stacked">
-                                    <li role="presentation" class="flatpages">
-                                        {% url 'ikwen:flatpage_list' as flatpage_list_url %}
-                                        <a href="{{ flatpage_list_url|append_auth_tokens:request }}">{% trans "Pages" %}</a>
-                                    </li>
-                                    <li role="presentation" class="community">
-                                        {% url 'ikwen:community' as community_url %}
-                                        <a href="{{ community_url|append_auth_tokens:request }}">{% trans "Community" %}</a>
-                                    </li>
-                                </ul>
-                                <div class="divider"></div>
-                                <ul class="nav nav-pills nav-stacked">
-                                    {% if config.is_pro_version %}
-                                    <li role="presentation" class="payment-means">
-                                        <a href="{% url 'billing:payment_mean_list' %}">
-                                            {% trans "Payment means" %}
-                                        </a>
-                                    </li>
-                                    {% endif %}
-                                    <li role="presentation" class="configuration">
-                                        {% url 'ikwen:configuration' as configuration_url %}
-                                        <a href="{{ configuration_url|append_auth_tokens:request }}">{% trans "Configuration" %}</a>
-                                    </li>
-                                    <li role="presentation" class="invoices">
-                                        {% url 'billing:invoice_list' as invoice_list_url %}
-                                        <a href="{{ invoice_list_url|ikwenize|append_auth_tokens:request }}"
-                                           target="_blank">{% trans 'Invoices' %}</a>
-                                    </li>
-                                    <li role="presentation" class="service-info">
-                                        {% url 'ikwen:service_detail' service.id as service_detail_url %}
-                                        <a href="{{ service_detail_url|append_auth_tokens:request }}">{% trans "Info & Billing" %}</a>
-                                    </li>
-                                </ul>
+                                {% block basic_nav %}
+                                    <div class="divider"></div>
+                                    <ul class="nav nav-pills nav-stacked">
+                                        <li role="presentation" class="flatpages">
+                                            {% url 'ikwen:flatpage_list' as flatpage_list_url %}
+                                            <a href="{{ flatpage_list_url }}">{% trans "Pages" %}</a>
+                                        </li>
+                                        <li role="presentation" class="community">
+                                            {% url 'ikwen:community' as community_url %}
+                                            <a href="{{ community_url }}">{% trans "Community" %}</a>
+                                        </li>
+                                    </ul>
+                                {% endblock %}
+                                {% block sudo_nav %}
+                                    <div class="divider"></div>
+                                    <ul class="nav nav-pills nav-stacked">
+                                        {% if config.is_pro_version %}
+                                        <li role="presentation" class="payment-means">
+                                            <a href="{% url 'billing:payment_mean_list' %}">
+                                                {% trans "Payment means" %}
+                                            </a>
+                                        </li>
+                                        {% endif %}
+                                        <li role="presentation" class="configuration">
+                                            {% url 'ikwen:configuration' as configuration_url %}
+                                            <a href="{{ configuration_url }}">{% trans "Configuration" %}</a>
+                                        </li>
+                                        <li role="presentation" class="invoices">
+                                            {% url 'billing:invoice_list' as invoice_list_url %}
+                                            <a href="{{ invoice_list_url|ikwenize }}"
+                                               target="_blank">{% trans 'Invoices' %}</a>
+                                        </li>
+                                        <li role="presentation" class="service-info">
+                                            {% url 'ikwen:service_detail' service.id as service_detail_url %}
+                                            <a href="{{ service_detail_url }}">{% trans "Info & Billing" %}</a>
+                                        </li>
+                                    </ul>
+                                {% endblock %}
                             {% endif %}
                         </div>
                         {% if filter and filter|length > 0 %}
