--- a/core/templates/core/base_bs.html
+++ b/core/templates/core/base_bs.html
@@ -5,7 +5,9 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        {% block meta %}{% endblock %}
+        {% block meta %}
+            {% include 'core/snippets/favicon.html' %}
+        {% endblock %}
 		{% block page_title %}{% endblock %}
 		{% block head_style %}
             <link rel='stylesheet' href="{% static 'ikwen/font-awesome/css/font-awesome.min.css' %}" />
