--- a/core/templates/core/base_private.html
+++ b/core/templates/core/base_private.html
@@ -1,6 +1,5 @@
 {% extends "core/base.html" %}
-{% load i18n %}
-{% load staticfiles %}
+{% load i18n static %}
 {% block head_style %}
     {{ block.super }}
     <link rel="stylesheet" type="text/css" href="{% static 'ikwen/css/grids2.css' %}">
