--- a/static/ikwen/css/base.css
+++ b/static/ikwen/css/base.css
@@ -11,8 +11,8 @@
 body {color: #545454}
 .working {cursor: wait}
 .success {background: #B6F1B6; border: 1px solid; border-radius: 3px; color: #039B03}
-.info {background: #dde9f1; border: 1px solid; border-radius: 3px; color: #1d2e9b}
-.failure, .error {background: #FFB6C1; border: 1px solid; border-radius: 3px; color:  #F00}
+.msg-tag.info {background: #dde9f1; border: 1px solid; border-radius: 3px; color: #1d2e9b}
+.failure, .msg-tag.error {background: #FFB6C1; border: 1px solid; border-radius: 3px; color:  #F00}
 .clear {clear: both}
 .text-muted {color: #888}
 .help {color: #888; font-size: 14px}
