--- a/core/templates/core/base_bs.html
+++ b/core/templates/core/base_bs.html
@@ -27,7 +27,7 @@
     {% block after_head %}{% endblock %}
     <body>
         <div id="top-notice-ctnr" style="display: none">
-            <span class="floating-notice has-shade" style="float: none; position: static"> Error goes here </span>
+            <span class="floating-notice has-shade" style="float: none; position: static"> </span>
         </div>
         {% block header %}
             {% with collaborates_on=user.collaborates_on %}
