--- a/cashout/templates/cashout/payments.html
+++ b/cashout/templates/cashout/payments.html
@@ -50,8 +50,8 @@
                             {% if not last_payment or last_payment.status != 'Pending' %}
                                 <button id="show-addresses" class="btn btn-primary btn-sm pull-right"
                                         data-toggle="modal" data-target="#confirm-cash-out">{% trans "REQUEST A PAYMENT" %}</button>
-                                    <p class="request-result text-success" style="display: none">{% trans "Request successful" %}</p>
-                                    <p class="request-result text-danger" style="display: none">{% trans "Request failed" %}</p>
+                                <p class="request-result text-success" style="display: none">{% trans "Request successful" %}</p>
+                                <p class="request-result text-danger" style="display: none">{% trans "Request failed" %}</p>
                             {% endif %}
                         {% else %}
                             <div class="text-muted" style="margin-top: 1em">
@@ -322,6 +322,7 @@
                         $('.request-result.text-success').show();
                     } else {
                         $('.request-result.text-danger').text(resp.error).show();
+                        $('#confirm-cash-out').modal('hide');
                     }
                 })
             })
