--- a/core/templates/core/mails/base.html
+++ b/core/templates/core/mails/base.html
@@ -1,6 +1,7 @@
 {% load i18n %}  {# Base Template for mails issued by Ikwen NoDev application. It includes a signature with Ikwen and NoDev #}
 {% load staticfiles %}
 <!DOCTYPE html>
+{% with config=service.config %}
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -88,3 +89,4 @@
         </div>
     </body>
 </html>
+{% endwith %}
