--- a/core/templates/core/mails/service_deployed.html
+++ b/core/templates/core/mails/service_deployed.html
@@ -2,6 +2,7 @@
 {% load i18n humanize %}
 
 {% block content %}
+    {% with config=service.config %}
     <div style="color: #777; font: normal 1.35em 'Open Sans', 'Helvetica Neue', Lato, Verdana, Arial, sans-serif; line-height: 1.44em; margin-top: 45px; min-height: 180px; padding: 0 15px; text-align: justify">
         {%trans "Congrats, you are online !" %}
          <br><br>
@@ -47,4 +48,5 @@
         </div>
         <p style="clear: both; padding-top: 2em">{% blocktrans with company_name=config.company_name %}Thank you for your business with {{ company_name }}.{% endblocktrans %}</p>
     </div>
+    {% endwith %}
 {% endblock %}
