Title of page fixed

--- a/accesscontrol/templates/accesscontrol/community.html
+++ b/accesscontrol/templates/accesscontrol/community.html
@@ -2,7 +2,7 @@
 {% load i18n humanize staticfiles auth_tokens %}
 
 {% block page_title %}
-<title> {% trans "Collaborators" %} - ikwen </title>
+<title> {% trans "Community" %} - ikwen </title>
 {% endblock %}
 
 {% block head_style %}
